# KA_rigidbody

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README (15).md  README.md  README.txt  __init__.py  _culverin (9).py  _culverin_c.pyd  base.py  blender_manifest.toml  culverin_loader.py  determinism.py  diagnostics (14).py  diagnostics.py  native_bridge.py  operators.py  properties.py  py (11).typed  reference.py  runtime.py  simulation_scene.py  solver_reference.py  ui.py
THIRD_PARTY_LICENSES/: CULVERIN_LICENSE.txt
backends/: culverin_loader.py  jolt.py  native_bridge.py  native_jolt_adapter.py  reference.py
core/: __init__.py  bonds.py  cache.py  coacd_bridge.py  constraints.py  coordinates.py  determinism.py  diagnostics.py  mass_conditioning.py  regression.py  scene_io.py  simulation_scene.py  solver_reference.py  stability_defaults.py
native/: ka_physics_bridge.h
native/jolt/: CMakeLists.txt  README.md  build_linux.sh  build_windows.ps1  ka_jolt_bridge.cpp  ka_jolt_bridge_stub.cpp
